<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ESP32Control">

    <TextView
        android:id="@+id/tv_selected_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/no_selected_device"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_is_connected"
        app:layout_constraintStart_toStartOf="@+id/tv_is_connected" />

    <TextView
        android:id="@+id/tv_is_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/not_connected"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/tv_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text=""
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_daten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/datenSwitch"
            tools:layout_editor_absoluteX="235dp"
            tools:layout_editor_absoluteY="450dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_led"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/ledSwitch"
            tools:layout_editor_absoluteX="235dp"
            tools:layout_editor_absoluteY="450dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_blinken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/blinkSwitch"
            tools:layout_editor_absoluteX="235dp"
            tools:layout_editor_absoluteY="450dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/connect" />

        <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disconnect" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_select_device"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:icon="@drawable/ic_edit"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_is_connected"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>